# mat-dash

./: .gitmodules  CMakeLists.txt  README.md  include.cmake
include/: matdash.hpp
include/matdash/: boilerplate.hpp  console.hpp  minhook.hpp
include/matdash/detail/: gen.hpp  gen.py  impl.hpp
src/: gen.hpp  gen.py  main.cpp  template-utils.hpp
